--- a/hw/week5.tex
+++ b/hw/week5.tex
@@ -41,12 +41,12 @@
 \end{exercise}
 
 \begin{exercise} \mbox{}
-  \begin{enumerate}
+  \begin{enumerate}[(a)]
     \item Let $\Cb(t)$ be the field of rational functions over $\Cb$ and
       $L$ be a splitting field of $x^n - t$ over $\Cb(t)$.
       Find $\Gal(L / \Cb(t))$.
     \item Let $\Fb_p(t)$ be the field of rational functions over $\Fb_p$ and
-      $L$ be a splitting field of $x^n - t$ over $\Fb_p(t)$.
+      $L$ be a splitting field of $x^3 - 2t$ over $\Fb_p(t)$.
       Find $\Gal(L / \Fb_p(t))$.
   \end{enumerate}
 \end{exercise}
@@ -58,7 +58,7 @@
   $\beta_1 = \alpha_1 \alpha_2 + \alpha_3 \alpha_4,
   \beta_2 = \alpha_1 \alpha_3 + \alpha_2 \alpha_4,
   \beta_3 = \alpha_1 \alpha_4 + \alpha_2 \alpha_3$.
-  \begin{enumerate}
+  \begin{enumerate}[(a)]
     \item Show that $L^{G_f \cap V} = K(\beta_1, \beta_2, \beta_3)$ and
       $\Gal\left(\quot{K(\beta_1, \beta_2, \beta_3)}{K}\right) \cong \quot{G_f}{G_f \cap V}$
       where $V = \Set{1, \cycle{1,2}\cycle{3,4}, \cycle{1,3}\cycle{2,4},
@@ -66,12 +66,12 @@
     \item Show that there exists $i$ s.t. $\beta_i \in K \iff G_f \subseteq D_4$.
     \item Let $h(x) = (x-\beta_1)(x-\beta_2)(x-\beta_3) \in K[x]$ with discriminant
       $D(h)$, Show that
-      \begin{enumerate}
+      \begin{enumerate}[(1)]
         \item If $h(x)$ is irr. and $D(h) \not\in K^2$, then $G_f \cong S_4$.
         \item If $h(x)$ is irr. and $D(h) \in K^2$, then $G_f \cong A_4$.
         \item If $h(x)$ splits completely in $K[x]$, then $G_f \cong V$.
         \item Let $h(x)$ has one root in $K$. Then
-          \begin{enumerate}
+          \begin{enumerate}[(i)]
             \item If $f(x)$ is irr. over $K(\beta_1, \beta_2, \beta_3)$, then
               $G_f \cong D_4$.
             \item If $f(x)$ is reducible over $K(\beta_1, \beta_2, \beta_3)$, then
