--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -14,10 +14,10 @@
 
 \begin{definition} \hfill
   \begin{itemize}
-    \item The cylotonic field $\Qb(\zeta_n)$ is the splitting field of $x^n - 1$ over $\Qb$.
+    \item The cyclotomic field $\Qb(\zeta_n)$ is the splitting field of $x^n - 1$ over $\Qb$.
     \item $\zeta$ is called an nth root of unity if $\zeta^n = 1$. $\mathcal{U} = \langle \zeta \rangle$
       is the multiplicative group of nth roots of unity.
-    \item $\zeta_n$ is called a primitive nth root of unity if $\zeta^n = 1$ but $\zeta^m = 1, \, \forall 0 < m < n$.
+    \item $\zeta_n$ is called a primitive nth root of unity if $\zeta^n = 1$ but $\zeta^m \ne 1, \, \forall 0 < m < n$.
     \item The nth cyclotomic polynomial is defined as
       \[ \Phi_n \triangleq \prod (x - \zeta) = \prod_{\gcd(k, n) = 1} (x - \zeta_n^k) \implies \deg \Phi_n = \varphi(n) \]
   \end{itemize}
