--- a/group/week8.tex
+++ b/group/week8.tex
@@ -63,7 +63,7 @@
 \begin{theorem}
   Let $G$ be a finitely generated abelian group. Then
   Then $G \cong \quot{\Zb}{d_1 \Zb} \oplus \dots \oplus \quot{\Zb}{d_l \Zb}
-  \oplus R^s, d_i \in \Zb$ with $d_i \Div d_{i+1} \quad
+  \oplus \Zb^s, d_i \in \Zb$ with $d_i \Div d_{i+1} \quad
   \forall i = 1, \dots, l-1$ for some $s \in \Zb^{\ge 0}$.
 
   Since $G$ can be regarded as a f.g. $\Zb$-module and $\Zb$ is a PID,
