--- a/hw/week5.tex
+++ b/hw/week5.tex
@@ -34,7 +34,7 @@
       $(1+p)^{p^{e-2}} \not\equiv 1 \pmod{p^e}$. And for $e \ge 3$,
       $(1+2^2)^{2^{e-2}} \equiv 1 \pmod{2^e}$ but
       $(1+2^2)^{2^{e-3}} \not\equiv 1 \pmod{2^e}$.
-    \item If each Sylow $p$-subgroup of $g$ is normal, then $G$ is isomorphic
+    \item If each Sylow $p$-subgroup of $G$ is normal, then $G$ is isomorphic
       to the product of all sylow $p$-subgroups.
   \end{enumerate}
 \end{exercise}
