--- a/hw/week5.tex
+++ b/hw/week5.tex
@@ -62,7 +62,7 @@
       $\Gal\left(\quot{K(\beta_1, \beta_2, \beta_3)}{K}\right) \cong \quot{G_f}{G_f \cap V}$
       where $V = \Set{1, \cycle{1,2}\cycle{3,4}, \cycle{1,3}\cycle{2,4},
       \cycle{1,4}\cycle{2,3}} \le S_4$.
-    \item Show that there exists $i$ s.t. $\beta_i \in K \iff G_f \subseteq D_4$.
+    \item Show that there exists $i$ s.t. $\beta_i \in K \iff G_f \le D_4$.
     \item Let $h(x) = (x-\beta_1)(x-\beta_2)(x-\beta_3) \in K[x]$ with discriminant
       $D(h)$, Show that
       \begin{enumerate}[(1)]
