Add week6 hw and notes (partial)

--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -59,7 +59,7 @@
         So we conclude that $f(\eta_n^p) = 0$ for any $p \mid n$, which could be extend
         and show that $f(\eta_n^k) = 0$ for any $\gcd(k, n) = 1$, thus $f = \Phi_n$.
       \end{proof}
-    \item $\Qb(\zeta_n) / \Ab$ is Galois with $[\Qb(\zeta_n): \Qb] = \deg \Phi_n = \varphi(n)$.
+    \item $\Qb(\zeta_n) / \Qb$ is Galois with $[\Qb(\zeta_n): \Qb] = \deg \Phi_n = \varphi(n)$.
     \item $\Gal(\Qb(\zeta_n) / \Qb) \cong \Fb_n^\times$.
   \end{itemize}
 \end{prop}
