--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -329,6 +329,7 @@
 \include{week3}
 \include{week4}
 \include{week5}
+\include{week6}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
