--- a/main.tex
+++ b/main.tex
@@ -188,6 +188,7 @@
 \newcommand{\Dc}{\mathcal{D}}
 \newcommand{\sT}{{\sf T}}
 \newcommand{\sI}{{\sf I}}
+\newcommand{\Id}{{\rm Id}}
 
 \newcommand{\Mf}{\mathfrak{M}}
 \newcommand{\Grf}{\mathfrak{Gr}}
@@ -343,6 +344,7 @@
 \include{fields/week3}
 \include{fields/week4}
 \include{fields/week5}
+\include{fields/week6}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
