--- a/hw/week6.tex
+++ b/hw/week6.tex
@@ -17,13 +17,13 @@
 \end{exercise}
 
 \begin{exercise}
-  Power sum: $\displaystyle P_k = \sum_{i=1}^n x_i^k$.
-  Show that Newton identities: $S_0 = 1$,
+  power sum: $\displaystyle p_k = \sum_{i=1}^n x_i^k$.
+  show that newton identities: $s_0 = 1$,
   \[
-    kS_k = \sum_{i=1}^k (-1)^{i-1} S_{k-i}P_i, \qquad
-    P_k = \sum_{i=1}^{k-1}(-1)^{i+k-1} S_{k-i}P_i + (-1)^{k-1}kS_k
+    ks_k = \sum_{i=1}^k (-1)^{i-1} s_{k-i}p_i, \qquad
+    p_k = \sum_{i=1}^{k-1}(-1)^{i+k-1} s_{k-i}p_i + (-1)^{k-1}ks_k
   \]
-  ($S_k$ are the elementary symmetric polynomials in $x_1, \dots, x_n$.)
+  ($s_k$ are the elementary symmetric polynomials in $x_1, \dots, x_n$.)
 \end{exercise}
 
 \begin{exercise}
