Update hw week7, 1-2 has some problems...

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -330,6 +330,7 @@
 \include{week4}
 \include{week5}
 \include{week6}
+\include{week7}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
