Add week 8 HW 1, 2 (蕊)

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -331,6 +331,7 @@
 \include{week5}
 \include{week6}
 \include{week7}
+\include{week8}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
