--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -145,14 +145,14 @@ Back to our problem, $[L_1 L_2 \cdots L_k: \Qb] = [\Qb(\zeta_n): \Qb] = \varphi(
   \end{proof}
 \end{theorem}
 
-\subsection{Kammer extension}
+\subsection{Kummer extension}
 In this section, we assume that $\Char K \nmid n$ and $\eta$ is a primitive $n$th root of unity.
 
 \begin{definition} \hfill
   \begin{itemize}
-    \item $L/K$ is called a Kammer extension of exponent $n$ if $\eta \in K$ and $L$ is a splitting field
+    \item $L/K$ is called a kummer extension of exponent $n$ if $\eta \in K$ and $L$ is a splitting field
       of $(x^n - a_1) (x^n - a_2) \dots (x^n - a_k)$ over $K$.
-    \item Let $\abs{G} < \intfy$, the exponent $e(G)$ of $G$ is the least positive integer $m$
+    \item Let $\abs{G} < \infty$, the exponent $e(G)$ of $G$ is the least positive integer $m$
       satisfied $g^m = 1$ for any $g \in G$.
   \end{itemize}
 \end{definition}
