--- a/hw/week7.tex
+++ b/hw/week7.tex
@@ -27,6 +27,8 @@
       y_n(n-1)^{n-1} p^n$, where
       \[
         y_n = \begin{cases}
+          1, & n \equiv 1, 2 \pmod 4 \\
+          -1, & n \equiv 0, 3 \pmod 4
         \end{cases}
       \]
   \end{enumerate}
